test.  fix process line spacing

--- a/src/assets/css/processSection.css
+++ b/src/assets/css/processSection.css
@@ -55,7 +55,7 @@
 }
 .theProcess li {
   font-size: 1em;
-  margin: 1em 0em;
+  margin: .6em 0em;
   font-family: var(--brand-font);
   font-weight: 300;
 }
@@ -66,6 +66,7 @@
 }
 .theProcess button {
   margin-bottom: .4em;
+  margin-top: .6em;
 }
 
 @media screen and (min-width: 480px) {
